Merged in feat/S2ED-62-formatting-rules (pull request #17)
Formating code

* Formating code

* conflicts resolved

* Formating when compile added


Approved-by: Oleksandr Verdiyev
Approved-by: Izzatulla Toshpulatov
Approved-by: Karol Wiewiór